Fixed margin issue causing spacing between divs

--- a/main.css
+++ b/main.css
@@ -9,7 +9,8 @@ body {
     color:darkRed;
     font-family:"Baskerville-Libre"}
 h1 {
-    font-size:50px;
+    margin-top:0;
+    font-size:80px;
     line-height:0.75em;
     margin-bottom:-25px;
 }
